--- a/angular.json
+++ b/angular.json
@@ -28,13 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less",
-              "./node_modules/uikit/dist/css/uikit.min.css",
-              "./node_modules/uikit/dist/css/uikit-core.min.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.less"
             ],
             "scripts": [
-              "./node_modules/uikit/dist/js/uikit.min.js",
-              "./node_modules/uikit/dist/js/uikit-icons.min.js"
             ]
           },
           "configurations": {
@@ -96,13 +93,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less",
-              "./node_modules/uikit/dist/css/uikit.min.css",
-              "./node_modules/uikit/dist/css/uikit-core.min.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.less"
             ],
             "scripts": [
-              "./node_modules/uikit/dist/js/uikit.min.js",
-              "./node_modules/uikit/dist/js/uikit-icons.min.js"
             ]
           }
         },
