--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "angular-auth-oidc-client": "11.6.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
