--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
-    "angular-auth-oidc-client": "11.6.2",
+    "@azure/msal-angular": "^2.0.0",
     "hammerjs": "^2.0.8",
+    "msal": "^1.4.11",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
     "uikit": "^3.6.17",
