--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@azure/msal-angular": "^2.0.0",
+    "@azure/msal-browser": "^2.14.2",
     "msal": "^1.4.11",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
